# phy241-project

./: .editorconfig  .gitattributes  .gitignore  README.md  pyproject.toml
data/: entropy  summary.txt
report/final/: FeedbackEmail.txt  KaonReport.docx
report/preliminary/: Kaon Experiment.pptx  Kaon Project prelim  Kaon Project.pptx  Kaon Project;0.pptx
scripts/: common.py  experiment_simulation.py  find_dec_length.py  generate.py  generate_plots.py  intersection.py
